src/objects/CME__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CMEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awarded_Date__c</fullName>
        <label>Date Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bias_Description__c</fullName>
        <label>Bias Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bias__c</fullName>
        <label>Bias</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CME_Hours__c</fullName>
        <label>Credits Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CME_Type__c</fullName>
        <label>CME Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non Physician</fullName>
                    <label>Non-Physician</label>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_to_Send__c</fullName>
        <label>Consent to Send</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CMEs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits_Available__c</fullName>
        <formula>If( RecordType.DeveloperName = &quot;Manuscript_Review&quot; , 3 , If( NOT(ISBLANK(Event__c))  ,Event__r.Max_CME_Credits__c, Live_Event__r.Max_CME_Credits__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credits Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diplomate_Number__c</fullName>
        <label>Diplomate Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.OrderApi__Preferred_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enduring_Material_Certificate__c</fullName>
        <description>##Conga created button:00b1I000000Fxf6</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[BatchcreateEMCertifi]00O1I000006Rehu&quot; + 
&quot;&amp;templateid=a2b1I0000017ogy&quot; + 
&quot;&amp;congaemailtemplateid=a2S1I0000015R8G&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailtoid=&quot; + Contact_ID__c +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;emailfromid=0D21I000000gBaC&quot; + 
&quot;&amp;emailbcc=cme@aacr.org&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Enduring Material Certificate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <label>CME Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Display_Name__c</fullName>
        <formula>If( NOT(ISBLANK(Event__c)),Event__r.EventApi__Display_Name__c,  Live_Event__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                    <default>true</default>
                    <label>Live</label>
                </value>
                <value>
                    <fullName>Internet Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Name</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>CME Credits</relationshipLabel>
        <relationshipName>CMEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JP_Institution__c</fullName>
        <formula>If(NOT(ISBLANK(Event__c)) ,Event__r.JP_Institution__c,   Live_Event__r.JP_Institution__r.Name )</formula>
        <label>JP Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Providership__c</fullName>
        <formula>Event__r.Joint_Providership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Joint Providership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Event_Certificate__c</fullName>
        <description>##Conga created button:00b1I000000nFpL
##Conga updated button:00b1I000000nFpL</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[LiveEventCerts]00O1I000006jt8m&quot; + 
&quot;&amp;templateid=a2b1I000000awpR&quot; + 
&quot;&amp;congaemailtemplateid=a2S1I0000015R8G&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailtoid=&quot; + Contact_ID__c +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;emailfromid=0D21I000000gBaC&quot; + 
&quot;&amp;emailbcc=cme@aacr.org&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Live Event Certificate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>CME Credits</relationshipLabel>
        <relationshipName>CME_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOC_Board__c</fullName>
        <label>MOC Board</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSR_Number__c</fullName>
        <label>MSR Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manuscript_Review_Certificates__c</fullName>
        <description>##Conga created button:00b1I000000nFp6
##Conga updated button:00b1I000000nFp6</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[MSRCertReport]00O1I000006jt8X&quot; + 
&quot;&amp;templateid=a2b1I000000awpM&quot; + 
&quot;&amp;congaemailtemplateid=a2S1I0000015R7r&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailtoid=&quot; + Contact_ID__c +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=Attachments&quot; + 
&quot;&amp;emailfromid=0D21I000000gBaC&quot; + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;emailbcc=cme@aacr.org&quot;</formula>
        <label>Manuscript Review Certificates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_CME_Credits__c</fullName>
        <label>Max Credits Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>TEXT(Contact__r.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_and_Place__c</fullName>
        <formula>If( NOT(ISBLANK(Event__c)) /* Condition 1: If Fonteva Events */
,Event__r.EventApi__Location_And_Date_Text__c, /* Fonteva Events */
CASE(MONTH(DATEVALUE(Live_Event__r.Start_Date__c)), /*ELSE Live Events; Month StartDate */
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp; &quot; &quot; /*Spacing */
&amp; TEXT(Day(DATEVALUE(Live_Event__r.Start_Date__c))) /*Day StartDate */
&amp; IF( DAY(DATEVALUE(Live_Event__r.Start_Date__c)) == DAY(DATEVALUE(Live_Event__r.End_Date__c)), /* Condition 2: If event is ONE Day */
&quot;&quot;, /* show nothing */
&quot; - &quot; &amp;
If(MONTH(DATEVALUE(Live_Event__r.Start_Date__c)) == MONTH(DATEVALUE(Live_Event__r.End_Date__c)), /*Condition 3: If start and end date is the same month */
TEXT(DAY(DATEVALUE(Live_Event__r.End_Date__c))) , /* Show Day EndDate*/
CASE(MONTH(DATEVALUE(Live_Event__r.End_Date__c)), /* ELSE show Month and Day of event EndDate */
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
	&quot;None&quot;) 
&amp; &quot; &quot; /* Spacing*/
&amp; TEXT(DAY(DATEVALUE(Live_Event__r.End_Date__c))) /* Day EndDate*/
) /*End Condition 3*/
) /*End Condition 2*/
&amp; &quot;, &quot; /*comma before the year*/
&amp; TEXT(YEAR(DATEVALUE(Live_Event__r.End_Date__c))) /*Year of EndDate */
&amp; IF( ISBLANK(Live_Event__r.Venue__c),/* Condition 4: If Event is Physical type (Venue__c is not null) */
&quot;&quot;, /* Show nothing*/
BR() &amp; Live_Event__r.Venue__r.Name &amp; BR() &amp; Live_Event__r.Venue__r.City__c &amp; &quot;, &quot; &amp; Live_Event__r.Venue__r.State__c /*ELSE Show City and State of Location*/
)/* End Condition 4*/
) /*End Condition 1*/</formula>
        <label>Time and Place</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_MSR__c</fullName>
        <description>Used to check for duplicates of manuscript reviews per reviewer.</description>
        <label>Unique MSR</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CME Credit</label>
    <listViews>
        <fullName>Live_Events</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Event_Code__c</columns>
        <columns>Awarded_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CME__c.Live_Event</value>
        </filters>
        <label>Live Events</label>
    </listViews>
    <listViews>
        <fullName>Manuscript_Reviews</fullName>
        <columns>MSR_Number__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Awarded_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CME__c.Manuscript_Review</value>
        </filters>
        <label>Manuscript Reviews</label>
    </listViews>
    <nameField>
        <label>CME Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CME Credits</pluralLabel>
    <recordTypes>
        <fullName>Enduring_Material</fullName>
        <active>true</active>
        <label>Enduring Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Event</fullName>
        <active>true</active>
        <label>Live Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manuscript_Review</fullName>
        <active>true</active>
        <label>Manuscript Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Credits_cannot_be_greater_than_max</fullName>
        <active>true</active>
        <description>CME credits claimed cannot be greater than max credits allowed for a given event.</description>
        <errorConditionFormula>AND(Credits_Available__c &gt; 0 ,CME_Hours__c &gt; Credits_Available__c)</errorConditionFormula>
        <errorDisplayField>CME_Hours__c</errorDisplayField>
        <errorMessage>The amount of credits claimed is larger than the available credits for this event.</errorMessage>
    </validationRules>
</CustomObject>